--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-project",
+  "name": "artistry-hub",
   "private": true,
   "version": "0.0.1",
   "type": "module",
@@ -17,11 +17,11 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.43",
-    "@types/react-dom": "^18.2.17",
+    "@types/react": "^18.2.46",
+    "@types/react-dom": "^18.2.18",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "10.4.16",
-    "eslint": "^8.55.0",
+    "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
@@ -29,8 +29,8 @@
     "lint-staged": "^15.2.0",
     "postcss": "^8.4.32",
     "prettier": "3.1.1",
-    "tailwindcss": "^3.3.6",
-    "vite": "^5.0.7"
+    "tailwindcss": "^3.4.0",
+    "vite": "^5.0.10"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
