--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@nextui-org/react": "^2.2.9",
     "framer-motion": "^10.17.8",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icon": "^1.0.0",
+    "react-icons": "^4.12.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.46",
