--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.21.1",
-    "sort-by": "^1.2.0",
-    "react-share": "^5.0.3"
+    "react-share": "^5.0.3",
+    "sort-by": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.46",
