--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "postcss": "^8.4.33",
     "prettier": "3.1.1",
     "tailwindcss": "^3.4.1",
-    "vite": "^5.0.11"
+    "vite": "^5.0.11",
+    "vite-plugin-compression2": "^0.11.0"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
