--- a/package.json
+++ b/package.json
@@ -12,17 +12,14 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
-    "framer-motion": "^10.17.12",
+    "framer-motion": "^10.18.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.0.0",
-    "react-masonry-css": "^1.0.16",
-    "react-modal": "^3.16.1",
-    "react-router-dom": "^6.21.1",
-    "react-share": "^5.0.3",
-    "sort-by": "^1.2.0"
+    "react-icons": "^5.0.1",
+    "react-router-dom": "^6.21.2",
+    "react-share": "^5.0.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.47",
